<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <fragment

        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.patient_pages.ApplicationFragment" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_notifications"
        android:layout_width="wrap_content"
        app:borderWidth="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@color/white"
        android:src="@drawable/bell_light"
        app:tint="@null"
        app:useCompatPadding="true" />

    <RelativeLayout
        android:id="@+id/bottom_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/belowmaplayout"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="11dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/title_approximate_reaching_date"
            android:textColor="@color/text_light"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/time_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="11dp"
            android:fontFamily="@font/poppins_regular"
            android:text="20 dəq"
            android:textColor="@color/text_dark"
            android:textSize="14sp" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/time_left"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="12dp"
            android:background="@color/view_grey" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/doctor_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line">

            <ImageView
                android:id="@+id/icn_doctor"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="13dp"
                android:src="@drawable/doctor_icon_main"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_doctor_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:fontFamily="@font/poppins_regular"
                android:paddingTop="5dp"
                android:text="Əli Əliyev"
                android:textColor="@color/text_dark"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/icn_doctor"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_hospital_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:fontFamily="@font/poppins_regular"
                android:text="1 saylı Şəhər Klinik Xəstəxanası"
                android:textColor="@color/text_light"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/icn_doctor" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/layout_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/doctor_info_layout"
            android:layout_marginTop="30dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_call"
                style="@style/Widget.Material3.Button.UnelevatedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:layout_weight="0.5"
                android:backgroundTint="@color/green"
                android:drawableLeft="@drawable/icon_call"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_horizontal"
                android:paddingStart="20dp"
                android:paddingTop="13dp"
                android:paddingEnd="0dp"
                android:paddingBottom="13dp"
                android:text="@string/title_call"
                android:textAllCaps="false"
                android:textSize="15sp"
                app:cornerRadius="6dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_message"
                style="@style/Widget.Material3.Button.UnelevatedButton"
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_weight="0.5"
                android:backgroundTint="@color/secondary_sky_blue"
                android:drawableLeft="@drawable/icon_message"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:paddingStart="13dp"
                android:paddingTop="13dp"
                android:paddingEnd="0dp"
                android:paddingBottom="13dp"
                android:text="@string/title_message"
                android:textAllCaps="false"
                android:textSize="15sp"
                app:cornerRadius="6dp" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@id/layout_buttons"
            android:fontFamily="@font/poppins_regular"
            android:foregroundTint="@color/main_red"
            android:outlineProvider="bounds"
            android:text="@string/title_cancel"
            android:textSize="16sp"
            app:cornerRadius="6dp"
            app:strokeColor="@color/main_red" />

    </RelativeLayout>

</RelativeLayout>
